--- a/web/index.html
+++ b/web/index.html
@@ -6,11 +6,26 @@ and open the template in the editor.
 -->
 <html>
     <head>
+                    <style>
+                        body, html {
+                height: 100%;
+            }
+            .bg {
+                background-image: url("pubg.gif");
+                height: 100%; 
+
+                /* Center and scale the image nicely */
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+        </style>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <h1 >Hello World!</h1>
+        <div class="bg"></div>
     </body>
 </html>
