--- a/web/index.html
+++ b/web/index.html
@@ -6,9 +6,22 @@ and open the template in the editor.
 -->
 <html>
     <head>
-                    <style>
-                        body, html {
+        <style>
+            
+            body, html {
                 height: 100%;
+            }
+            .button {
+                background-color: #4CAF50;
+                border: none;
+                color: white;
+                padding: 15px 32px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin: 4px 2px;
+                cursor: pointer;
             }
             .bg {
                 background-image: url("pubg.gif");
@@ -25,7 +38,13 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1 >Hello World!</h1>
-        <div class="bg"></div>
+        <div class="bg">
+            <form action="WeaponCat.html">
+                <input type="submit" class="button" value="Weapon Category">                
+            </form>
+        </div>
+        <div >
+            
+        </div>
     </body>
 </html>
